[package]
name = "uniform_rand"
version = "0.1.0"
authors = ["monty <amonteolivam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-bignumber = "1.0"
rand = "0.4.0"
plotlib = "0.5.1"
histogram = "0.6.9"
sha3 = "0.9.1"
blake2 = "0.9.1"
blake3 = "0.3.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
